fix decision tree on mobile

--- a/src/components/decision-tree/decision-tree.scss
+++ b/src/components/decision-tree/decision-tree.scss
@@ -65,7 +65,7 @@ $outline-offset: 0.2rem;
     @media (max-width: 576px) {
       background: none;
       box-shadow: none;
-      padding: 0.5em 0 0.5em 55px;
+      padding: 0.5em 0 0.5em 0.5em;
       text-align: left;
     }
   }
